[package]
name = "insertStockPrice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "*",features = ["serde"]}
reqwest = "0.11.24"
rust_decimal = "1.34.3"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "chrono","rust_decimal"] }
tokio = {version = "*",features = ["full"]}
dotenv = "*"